# Unitest-Agent

./: .coverage  .gitignore  README.md  clean_duplicates.py  config.py  main.py  pyproject.toml  pytest.ini  setup.sh  test_generation.py  workflow.py
agents/: agent.py  prompt.py  unit_test_agent.py
agents/existing_test_analyzer_agent/: existing_test_analyzer_agent.py  existing_test_analyzer_agent_prompt.py
agents/mock_class_agent/: mock_class_agent.py  mock_class_agent_prompt.py
agents/unittest_agent/: unittest_agent.py  unittest_agent_prompt.py
backend/: README.md  db.sqlite3  requirements.txt
backend/backend_project/: settings.py  urls.py
backend/repo_analyzer/: admin.py  models.py  serializers.py  urls.py  views.py
generated_tests/: test_tensorflow_batchcheckpointtest.py  test_tensorflow_batchglobalshufflecheckpointtest.py  test_tensorflow_batchglobalshuffletest.py  test_tensorflow_batchrandomaccesstest.py  test_tensorflow_batchtest.py
helpers/: check_syntax.py  clean_code.py  code_analyser.py  logging_config.py  merge_test_code.py  prompt_writter.py  read_file.py  save_code.py  test_runner.py
helpers/analysers/: class_formatter_analyzer.py  code_analyzer.py  (+1 more)
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0af964e14b9186ca_test_cal_py.html  z_100bcc0f15780b9c_test_sub_py.html  z_170f3580330e62a3_test_add_py.html  z_1aa2198665b9fbd1_sub_py.html  z_2c8070652cb4c405_calculator_py.html  z_2c8070652cb4c405_complex_py.html  z_2c8070652cb4c405_tensorflow_py.html  z_5981af7e45540744_test_mul_py.html  z_78f949ef26c71308_mul_py.html  z_929448fee7fd66e9_test_calculator_py.html  z_929448fee7fd66e9_test_complex_py.html  z_929448fee7fd66e9_test_tensorflow_py.html  z_b2d55d6facb68f15_div_py.html  z_b923a16fe5992c6e_test_div_py.html  z_d955df0e9892ecbd_add_py.html  z_fdf526338abac044_cal_py.html
project/: calculator.py
project/utils/: helper.py
sample_code/: calculator.py  complex.py  pytest.ini
sample_project/: .coveragerc  calculator.py
(+15 files in other folders)
